Remove static scores

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LeaderBoard</title>
-  <script defer src="runtime.bundle.js"></script><script defer src="index.bundle.js"></script><script defer src="runtime.bundle.js"></script><script defer src="index.bundle.js"></script></head>
+  </head>
   <body>
     <h1>LeaderBoard</h1>
     <div class="main">
@@ -13,15 +13,7 @@
           <h2 class="recentScores">Recent scores</h2>
           <input type="button" value="Refresh" class="refresh" />
         </div>
-        <ul class="score-container">
-          <li>Hafiz: 100</li>
-          <li>Ajmal: 20</li>
-          <li>Omid: 50</li>
-          <li>Ali: 75</li>
-          <li>Ahmad: 77</li>
-          <li>Baqir: 100</li>
-          <li>Jawad: 90</li>
-        </ul>
+        <ul class="score-container"></ul>
       </section>
       <section class="add-section">
         <h2>Add your score</h2>
